fix: add backdrop blur on safari with webkit prefix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,3 +31,8 @@ body {
     text-wrap: balance;
   }
 }
+
+.webkit-backdrop-blur {
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+}
